--- a/ObjC_Coolness/ObjC_Coolness/InspectorPanel.xib
+++ b/ObjC_Coolness/ObjC_Coolness/InspectorPanel.xib
@@ -8,6 +8,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="CLNAppDelegate">
             <connections>
                 <outlet property="inspectorPanel" destination="Kjf-BB-pJo" id="DA2-bS-iMU"/>
+                <outlet property="inspectorViewController" destination="IZj-tJ-5j1" id="fJU-Sl-V1C"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -20,8 +21,45 @@
             <view key="contentView" id="9a6-OB-rjO">
                 <rect key="frame" x="0.0" y="0.0" width="276" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g8M-oG-9i3">
+                        <rect key="frame" x="18" y="164" width="240" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" lineBreakMode="clipping" title="Cool Cell Text" id="rWd-Ng-8fW">
+                            <font key="font" usesAppearanceFont="YES"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gi4-fK-A2n">
+                        <rect key="frame" x="20" y="131" width="236" height="25"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Enter a label" drawsBackground="YES" id="v8A-UT-5SB">
+                            <font key="font" metaFont="system" size="17"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oU6-97-tBx">
+                        <rect key="frame" x="176" y="13" width="91" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Add Cell" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="SmD-Sy-wpi">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="addCell:" target="-1" id="G48-XN-PTV"/>
+                        </connections>
+                    </button>
+                </subviews>
             </view>
-            <point key="canvasLocation" x="-22" y="4.5"/>
+            <point key="canvasLocation" x="-22" y="4"/>
         </window>
+        <viewController id="IZj-tJ-5j1" customClass="CLNInspectorViewController">
+            <connections>
+                <outlet property="textField" destination="gi4-fK-A2n" id="hwG-XK-Zdr"/>
+                <outlet property="view" destination="9a6-OB-rjO" id="AAA-gm-mk4"/>
+            </connections>
+        </viewController>
     </objects>
 </document>
